--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@ example of inline elements
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/stephenespinal22">GitHub</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/stephenespinal22">GitHub</a>
+        </li>
       </ul>
     </nav>
 
