uploading new folder structure

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ example of inline elements
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <!-- end boot strap -->
 
-  <link rel="stylesheet" href="landingPage.css">
+  <link rel="stylesheet" href="css/landingPage.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
 
