--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ example of inline elements
           <a class="nav-link" href="projects/projects.html">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="aboutMe/aboutMe.html">About Me</a>
+          <a class="nav-link" href="aboutMe/aboutMe.html">About Meeeeeeeeeee</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://stephenespinal.home.blog/">Blog</a>
