--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 Name: Stephen Espinal
 Date Created: 4/4/2019
 Most recent revision: 4/4/2019
-
-example of inline elements
-<p>This is a paragraph. <strong>This sentence is bold with one word in <em>italics</em>.</strong></p>
 -->
 
 <!DOCTYPE html>
@@ -12,28 +9,19 @@ example of inline elements
 
 <head>
   <title>Stephen's Portfolio</title>
-  <!--BootStrap CDN-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CDN copied from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
-  <link rel="stylesheet" href="styles/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
-  <!-- end boot strap -->
-
+  <!-- BOOTSTRAP CDN-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/landingPage.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
 
-<body id = "landingBackground">
-
-  <header class="jumbotron fixed-top" id="headerJumbo">
-    <!-- Navigation inside jumbotron -->
-          <h1 id="header1">Stephen Espinal</h1>
-    <nav id = "navbar">
-      <!-- navbar for desktop -->
+<body>
+  <!-- <nav id="navbar">
       <ul class="nav justify-content-end fixed-top">
         <li class="nav-item">
           <a class="nav-link" href="projects/projects.html">Projects</a>
@@ -52,42 +40,357 @@ example of inline elements
         </li>
       </ul>
     </nav>
+-->
 
-    <!-- hamburger menu for phone -->
-    <nav class="navbar-dark nav justify-content-end fixed-top" id = "hamburger">
-    <a class="navbar-brand" href="#"></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav ">
-        <li class="nav-item active">
-          <a class="nav-link" href="projects/projects.html">Projects<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="aboutMe/aboutMe.html">About Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" target="_blank" href="https://stephenespinal.home.blog/">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" target="_blank" href="https://github.com/stephenespinal22">GitHub</a>
-        </li>
-      </ul>
+  <div class="container-fluid">
+    <!-- Sidenavigation and accordion dropdown -->
+    <section class="sidenav" id="side">
+      <div class="sideNav-close"></div>
+      <div class="sideNav-container">
+        <a href=" index.html"><button id='navHomeLink' class="sideNavButton">HOME</button></a>
+        <button class="sideNavButton" onclick="accordion(0)" id="current1">PROJECTS<i class="more"
+            id="dn1"></i></button>
+        <div class="optionLinks" id="option1">
+          <a href="" target="blank">BlogSite</a>
+          <a href="" target="blank">SuperTracker</a>
+        </div>
+        <button class="sideNavButton" onclick="accordion(1)" id="current2">FILES<i class="more" id="dn2"></i></button>
+        <div class="optionLinks" id="option2">
+          <a href="documents/StephenEspinalResume.pdf" target="_blank">Resume</a>
+        </div>
+        <button class="sideNavButton" onclick="accordion(2)">LINKS<i class="more" id="dn3"></i></button>
+        <div class="optionLinks" id="option3">
+          <a href="https://github.com/stephenespinal22" target="blank">Github</a>
+          <a href="" target="blank">Linkedin</a>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <!-- Hamburger menu -->
+  <section class="hamcontainer" onclick="toggleNav()" id="hamburger">
+    <div class="ham" id="first"></div>
+    <div class="ham" id="second"></div>
+    <div class="ham" id="third"></div>
+  </section>
+
+    <div class="row">
+      <div class="col-12 header">
+
+        <nav>
+          <ul>
+            <li><a href="index.html" id="current">Home</a></li>
+            <li><a href="https://github.com/lliguihector" target="_blank">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/hector-lliguichuzhca-965aaa13b" target="_blank">Linkedin</a>
+            </li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="documents/HectorLliguichuzhcaResume.pdf" target="_blank">Resume</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+
+      </div>
     </div>
-  </nav>
-
-  </header>
 
 
+    <div class="row">
+      <div class="col-md-6 indent myFont">
 
-  <footer class="fixed-bottom text-center">
-    <p>&copy; 2019 Stephen Espinal. All rights reserved</p>
-  </footer>
-  <!-- CDN links copied from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+        <div class="tag">
+          <p>Hello I'm</p>
+        </div>
+
+        <h2>Hector lliguichuzhca</h2>
+
+        <h4>Full-Stack Software Developer</h4>
+
+
+        <ul>
+          <li><i class="fa fa-envelope "></i><a> lliguichuzcah@gmail.com</a></li>
+          <li><i class="fa fa-phone "></i><a> 718 536 9221</a></li>
+          <li><i class="fa fa-map-marker"></i> Long Island City, NY, 11101</li>
+          <a class="links" href="https://github.com/lliguihector" target="_blank"><i class="fa fa-github"></i></a>
+          <a class="links" href="https://www.linkedin.com/in/hector-lliguichuzhca-965aaa13b" target="_blank"><i
+              class="fa fa-linkedin"></i></a>
+        </ul>
+
+        <a class="downloadbtn" href="documents/HectorLliguichuzhcaResume.pdf" target="_blank">
+          <p><i class="fa fa-file"></i> View Resume</p>
+        </a>
+
+
+      </div>
+
+      <div class="col-md-6">
+
+
+
+        <!-- <img class="img-border" src="landingPageImages/photo.jpg"> -->
+
+      </div>
+    </div>
+
+    <div class="row indent new-section">
+      <div class="col-md-6 indent">
+        <h4>EDUCATION & CERTIFICATION</h4>
+
+
+
+        <img src="images/sg.png" style="width:60px; height:60px; background:white;">
+
+
+        <H6>LAGCC Web Developer Bootcamp - Java</H6></a>
+
+        <p><i><a href="https://www.youracclaim.com/badges/8e795d2a-e73e-4d97-9c85-d8ac1f05059b/linked_in_profile"
+              target="_blank">8 Month Full Stack Java Boot CampCertification</a></i></p>
+
+
+        <img src="images/CUNY.png" style="width:55px; height:53px;">
+
+        <H6>City University of New York, CUNY, York College</H6>
+
+
+        <p><i>Bachelors of Science in Computer Science</i></p></a>
+      </div>
+
+
+
+
+
+      <div class="col-md-6">
+
+
+        <h4>ABOUT ME</h4>
+        <p style="text-align:left;">Hello im Hector, Full stack Web developer based on New York City.
+          Experienced and passionate in creating full stack web applications, IOS apps and dynamic webpages. Also
+          I am good at
+
+
+        </p>
+
+        <h4>SKILLS</h4>
+
+        <div>
+          <p class="skills">JAVA</p>
+          <p class="skills">C++</p>
+          <p class="skills">SWIFT</p>
+          <p class="skills">MySQL</p>
+          <p class="skills">PHP</p>
+          <p class="skills">Ajax</p>
+          <p class="skills">JQuery</p>
+
+        </div>
+        <div>
+          <p class="skills">GIMP</p>
+          <p class="skills">HTML</p>
+          <p class="skills">CSS</p>
+          <p class="skills">Bootstrap</p>
+          <p class="skills">Spring Web MVC</p>
+          <p class="skills">Spring JDBC</p>
+          <p class="skills">JavaScript</p>
+          <p class="skills">REST Web Services</p>
+        </div>
+      </div>
+    </div>
+
+
+
+
+    <div class="row indent">
+
+      <div class="col-md-6">
+        <h2>PROJECTS</h2>
+
+        <h4>Blog Website - <a href="https://hectorsblog.herokuapp.com/" target="_blank">View</a></h4>
+
+        <ul>
+
+          <li>
+            <p>Created a Full Stack dynamic Blog website following MVC design pattern.With security login features
+              for multiple users. Allows admin user to manage other contributers blog posts.
+              Users are able to add, edit delete, and create a blog post.
+
+            </p>
+          </li>
+          <li>
+            <p><i>Technologies Used: Java, Thyme Leaf, MySQL, JavaScript, TinyMCE, HTML, CSS, Bootstrap, Spring MVC,
+                Heroku, Tomcat and Spring Depenency Injection</i></p>
+          </li>
+        </ul>
+        <button class="screenshotsbtn">View Screenshots</button>
+      </div>
+
+      <div class="col-md-6">
+        <!--Carousel Wrapper-->
+        <div id="carousel-example-2" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel">
+          <!--Indicators-->
+
+          <!--/.Indicators-->
+          <!--Slides-->
+          <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+              <div class="view">
+                <img class="d-block w-100" src="images/project.png" alt="First slide">
+                <div class="mask rgba-black-light"></div>
+              </div>
+              <div class="carousel-caption">
+                <h3 class="h3-responsive">Admin login</h3>
+                <p>manage all users blog posts</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <!--Mask color-->
+              <div class="view">
+                <img class="d-block w-100" src="images/project2.png" alt="Second slide">
+                <div class="mask rgba-black-light"></div>
+              </div>
+              <div class="carousel-caption">
+                <h3 class="h3-responsive">TinyMCE API</h3>
+                <p>add a new blog</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <!--Mask color-->
+              <div class="view">
+                <img class="d-block w-100" src="images/project3.png" alt="Third slide">
+                <div class="mask rgba-black-light"></div>
+              </div>
+              <div class="carousel-caption">
+                <h3 class="h3-responsive">Feed page</h3>
+                <p>view current blog posts</p>
+              </div>
+            </div>
+          </div>
+          <!--/.Slides-->
+          <!--Controls-->
+
+          <!--/.Controls-->
+        </div>
+        <!--/.Carousel Wrapper-->
+      </div>
+
+    </div>
+
+
+
+    <br>
+    <br>
+
+    <!-- PROJECT 2 -->
+    <div class="row indent">
+
+      <div class="col-md-6">
+        <!--Carousel Wrapper-->
+        <div id="carousel-example-2" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel">
+          <!--Indicators-->
+
+          <!--/.Indicators-->
+          <!--Slides-->
+          <div class="carousel-inner" role="listbox">
+
+            <div class="carousel-item active">
+
+              <div class="view">
+                <img class="d-block w-100" src="images/project.png" alt="First slide">
+                <div class="mask rgba-black-light"></div>
+              </div>
+
+              <div class="carousel-caption">
+                <h3 class="h3-responsive">XCODE IDE</h3>
+                <p>manage all users blog posts</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <!--Mask color-->
+              <div class="view">
+                <img class="d-block w-100" src="images/iosproject.png" alt="Second slide">
+                <div class="mask rgba-black-light"></div>
+              </div>
+              <div class="carousel-caption">
+                <h3 class="h3-responsive">XCODE IDE</h3>
+                <p>early stage of developement</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <!--Mask color-->
+              <div class="view">
+                <img class="d-block w-100" src="images/project3.png" alt="Third slide">
+                <div class="mask rgba-black-light"></div>
+              </div>
+              <div class="carousel-caption">
+                <h3 class="h3-responsive">Feed page</h3>
+                <p>view current blog posts</p>
+              </div>
+            </div>
+          </div>
+          <!--/.Slides-->
+          <!--Controls-->
+
+          <!--/.Controls-->
+        </div>
+      </div>
+
+      <div class="col-md-6">
+
+        <h4>SWIFT IOS - Task management App</h4>
+
+        <ul>
+
+          <li>
+            <p>Currently working on a Full CRUD based ios application using the MVC design pattern. Allowes for
+              multiple user accounts. The purpose of the program is to alow users todo
+              manage personal tasks.
+            </p>
+          </li>
+          <li>
+            <p><i>Technologies Used: SWIFT, Core Data, Realm Database</i></p>
+          </li>
+        </ul>
+        <button class="screenshotsbtn">View Screenshots</button>
+      </div>
+
+    </div>
+
+
+
+
+    <!-- <div class="row">
+  <div class="col-lg-12" style="padding:0px;"> -->
+    <div class="row">
+      <div class="col-lg-12 footer">
+        <div class="footerlink_container">
+          <ul>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">Terms</a></li>
+          </ul>
+        </div>
+
+        <div class="socialmedia sm">
+          <img class="medilinks" src="landingPageImages/linkedin.png">
+          <img class="medilinks" src="landingPageImages/github.png">
+        </div>
+
+
+        <footer class="text-center">
+          <p>&copy; 2019 Stephen Espinal. All rights reserved</p>
+        </footer>
+      </div>
+    </div>
+
+
+
+
+
+
+
+
+    <!-- CDN links copied from https://getbootstrap.com/docs/4.1/getting-started/introduction/ -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <script src="js/indexScript.js"></script>
+
 </body>
 
 </html>
