uploading new folder structure

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ Most recent revision: 4/4/2019
     <div class="ham" id="third"></div>
   </section>
 
+  <div class="container-fluid">
+
     <div class="row">
       <div class="col-12 header">
 
@@ -94,7 +96,7 @@ Most recent revision: 4/4/2019
 
 
     <div class="row">
-      <div class="col-md-6 indent myFont">
+      <!-- <div class="col-md-6 indent myFont">
 
         <div class="tag">
           <p>Hello I'm</p>
@@ -119,7 +121,7 @@ Most recent revision: 4/4/2019
         </a>
 
 
-      </div>
+      </div> -->
 
       <div class="col-md-6">
 
@@ -130,7 +132,7 @@ Most recent revision: 4/4/2019
       </div>
     </div>
 
-    <div class="row indent new-section">
+    <!-- <div class="row indent new-section">
       <div class="col-md-6 indent">
         <h4>EDUCATION & CERTIFICATION</h4>
 
@@ -191,7 +193,7 @@ Most recent revision: 4/4/2019
           <p class="skills">REST Web Services</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
 
@@ -199,7 +201,7 @@ Most recent revision: 4/4/2019
     <div class="row indent">
 
       <div class="col-md-6">
-        <h2>PROJECTS</h2>
+        <!-- <h2>PROJECTS</h2>
 
         <h4>Blog Website - <a href="https://hectorsblog.herokuapp.com/" target="_blank">View</a></h4>
 
@@ -218,7 +220,7 @@ Most recent revision: 4/4/2019
           </li>
         </ul>
         <button class="screenshotsbtn">View Screenshots</button>
-      </div>
+      </div> -->
 
       <div class="col-md-6">
         <!--Carousel Wrapper-->
@@ -352,7 +354,7 @@ Most recent revision: 4/4/2019
     </div>
 
 
-
+</div>
 
     <!-- <div class="row">
   <div class="col-lg-12" style="padding:0px;"> -->
