uploading new folder structure

--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@ Most recent revision: 4/4/2019
 
 
     <div class="row">
-      <!-- <div class="col-md-6 indent myFont">
+
+      <div class="col-md-6 indent myFont">
 
         <div class="tag">
           <p>Hello I'm</p>
@@ -121,18 +122,19 @@ Most recent revision: 4/4/2019
         </a>
 
 
-      </div> -->
+      </div>
 
       <div class="col-md-6">
 
 
-
+<!-- NOT THIS -->
         <!-- <img class="img-border" src="landingPageImages/photo.jpg"> -->
 
       </div>
     </div>
 
-    <!-- <div class="row indent new-section">
+
+    <div class="row indent new-section">
       <div class="col-md-6 indent">
         <h4>EDUCATION & CERTIFICATION</h4>
 
@@ -193,7 +195,7 @@ Most recent revision: 4/4/2019
           <p class="skills">REST Web Services</p>
         </div>
       </div>
-    </div> -->
+    </div>
 
 
 
@@ -201,7 +203,9 @@ Most recent revision: 4/4/2019
     <div class="row indent">
 
       <div class="col-md-6">
-        <!-- <h2>PROJECTS</h2>
+
+
+        <h2>PROJECTS</h2>
 
         <h4>Blog Website - <a href="https://hectorsblog.herokuapp.com/" target="_blank">View</a></h4>
 
@@ -220,7 +224,7 @@ Most recent revision: 4/4/2019
           </li>
         </ul>
         <button class="screenshotsbtn">View Screenshots</button>
-      </div> -->
+      </div>
 
       <div class="col-md-6">
         <!--Carousel Wrapper-->
