uploading new folder structure

--- a/index.html
+++ b/index.html
@@ -103,145 +103,97 @@ Most recent revision: 4/4/2019
     <h2 id="projects-heading">Projects</h2>
     <div class="row ">
       <div class="col-12">
-        <section class="blog-site">
+        <section class="project">
+          <h3 class="project-banner">BlogPosts - <a href="https://sedev-blogsite.herokuapp.com" target="_blank">Visit
+              Website</a></h3>
           <!--Carousel Wrapper-->
           <div id="carousel-example-2" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel">
             <!--Slides-->
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
                 <div class="view">
-                  <img class="d-block w-100" src="images/project.png" alt="First slide">
+                  <img class="d-block w-100" src="landingPageImages/blog1.png" alt="First slide">
                   <div class="mask rgba-black-light"></div>
-                </div>
-                <div class="carousel-caption">
-                  <h3 class="h3-responsive">Admin login</h3>
-                  <p>manage all users blog posts</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <!--Mask color-->
                 <div class="view">
-                  <img class="d-block w-100" src="images/project2.png" alt="Second slide">
+                  <img class="d-block w-100" src="landingPageImages/blog2.png" alt="Second slide">
                   <div class="mask rgba-black-light"></div>
-                </div>
-                <div class="carousel-caption">
-                  <h3 class="h3-responsive">TinyMCE API</h3>
-                  <p>add a new blog</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <!--Mask color-->
                 <div class="view">
-                  <img class="d-block w-100" src="images/project3.png" alt="Third slide">
+                  <img class="d-block w-100" src="landingPageImages/blog4.png" alt="Third slide">
                   <div class="mask rgba-black-light"></div>
                 </div>
-                <div class="carousel-caption">
-                  <h3 class="h3-responsive">Feed page</h3>
-                  <p>view current blog posts</p>
+              </div>
+              <div class="carousel-item">
+                <!--Mask color-->
+                <div class="view">
+                  <img class="d-block w-100" src="landingPageImages/blog3.png" alt="Third slide">
+                  <div class="mask rgba-black-light"></div>
                 </div>
               </div>
             </div>
           </div>
           <!--/Carousel Wrapper-->
-          <h4>Blog Website - <a href="https://hectorsblog.herokuapp.com/" target="_blank">View</a></h4>
-
-          <ul>
-
-            <li>
-              <p>Created a Full Stack dynamic Blog website following MVC design pattern.With security login features
-                for multiple users. Allows admin user to manage other contributers blog posts.
-                Users are able to add, edit delete, and create a blog post.
-
-              </p>
-            </li>
-            <li>
-              <p><i>Technologies Used: Java, Thyme Leaf, MySQL, JavaScript, TinyMCE, HTML, CSS, Bootstrap, Spring MVC,
-                  Heroku, Tomcat and Spring Depenency Injection</i></p>
-            </li>
-          </ul>
-          <button class="screenshotsbtn">View Screenshots</button>
-
+          <a class="viewMore" href="blogsite/blogsiteinfo.html">View More Info</a>
         </section>
-      </div>
 
+        </br></br>
 
-
-      <br>
-      <br>
-
-      <!-- PROJECT 2 -->
-      <div class="row ">
-
-        <div class="col-md-6">
+        <section class="project">
+          <h3 class="project-banner">SuperTracker - <a href="https://sedev-supertracker.herokuapp.com"
+              target="_blank">Visit
+              Website</a></h3>
           <!--Carousel Wrapper-->
           <div id="carousel-example-2" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel">
-            <!--Indicators-->
-
-            <!--/.Indicators-->
             <!--Slides-->
             <div class="carousel-inner" role="listbox">
-
               <div class="carousel-item active">
-
                 <div class="view">
-                  <img class="d-block w-100" src="images/project.png" alt="First slide">
+                  <img class="d-block w-100" src="landingPageImages/tracker1.png" alt="First slide">
                   <div class="mask rgba-black-light"></div>
-                </div>
-
-                <div class="carousel-caption">
-                  <h3 class="h3-responsive">XCODE IDE</h3>
-                  <p>manage all users blog posts</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <!--Mask color-->
                 <div class="view">
-                  <img class="d-block w-100" src="images/iosproject.png" alt="Second slide">
+                  <img class="d-block w-100" src="landingPageImages/tracker2.png" alt="Second slide">
                   <div class="mask rgba-black-light"></div>
-                </div>
-                <div class="carousel-caption">
-                  <h3 class="h3-responsive">XCODE IDE</h3>
-                  <p>early stage of developement</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <!--Mask color-->
                 <div class="view">
-                  <img class="d-block w-100" src="images/project3.png" alt="Third slide">
+                  <img class="d-block w-100" src="landingPageImages/tracker3.png" alt="Third slide">
                   <div class="mask rgba-black-light"></div>
                 </div>
-                <div class="carousel-caption">
-                  <h3 class="h3-responsive">Feed page</h3>
-                  <p>view current blog posts</p>
+              </div>
+              <div class="carousel-item">
+                <!--Mask color-->
+                <div class="view">
+                  <img class="d-block w-100" src="landingPageImages/tracker4.png" alt="Third slide">
+                  <div class="mask rgba-black-light"></div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <!--Mask color-->
+                <div class="view">
+                  <img class="d-block w-100" src="landingPageImages/tracker6.png" alt="Third slide">
+                  <div class="mask rgba-black-light"></div>
                 </div>
               </div>
             </div>
-            <!--/.Slides-->
-            <!--Controls-->
-
-            <!--/.Controls-->
           </div>
-        </div>
-
-        <div class="col-md-6">
-
-          <h4>SWIFT IOS - Task management App</h4>
-
-          <ul>
-
-            <li>
-              <p>Currently working on a Full CRUD based ios application using the MVC design pattern. Allowes for
-                multiple user accounts. The purpose of the program is to alow users todo
-                manage personal tasks.
-              </p>
-            </li>
-            <li>
-              <p><i>Technologies Used: SWIFT, Core Data, Realm Database</i></p>
-            </li>
-          </ul>
-          <button class="screenshotsbtn">View Screenshots</button>
-        </div>
+          <!--/Carousel Wrapper-->
+          <a class="viewMore" href="supertracker/supertrackerinfo.html">View More Info</a>
+        </section>
       </div>
+
     </div>
 
     <div class="row">
