uploading new folder structure

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ Most recent revision: 4/4/2019
     <div class="row ">
       <div class="col-12">
         <section class="project">
-          <h3 class="project-banner">BlogPosts - <a href="https://sedev-blogsite.herokuapp.com" target="_blank">Visit
-              Website</a></h3>
+          <h3 class="project-banner">● BlogPosts<a class="visit" href="https://sedev-blogsite.herokuapp.com"
+            target="_blank">Visit Website</a></h3>
           <!--Carousel Wrapper-->
           <div id="carousel-example-2" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel">
             <!--Slides-->
@@ -146,9 +146,8 @@ Most recent revision: 4/4/2019
         </br></br>
 
         <section class="project">
-          <h3 class="project-banner">SuperTracker - <a href="https://sedev-supertracker.herokuapp.com"
-              target="_blank">Visit
-              Website</a></h3>
+          <h3 class="project-banner">● SuperTracker<a class="visit" href="https://sedev-supertracker.herokuapp.com"
+              target="_blank">Visit Website</a></h3>
           <!--Carousel Wrapper-->
           <div id="carousel-example-2" class="carousel slide carousel-fade z-depth-1-half" data-ride="carousel">
             <!--Slides-->
@@ -192,7 +191,7 @@ Most recent revision: 4/4/2019
           <!--/Carousel Wrapper-->
           <a class="viewMore" href="supertracker/supertrackerinfo.html">View More Info</a>
         </section>
-      </br></br>
+        </br></br>
       </div>
 
     </div>
